--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "samscripts"]
 	path = samscripts
-	url = git@github.com:isovic/samscripts.git
+	url = https://github.com/isovic/samscripts.git
